syntax = "proto3";

package users.v1;

message CreateUserResponseMessage {
  string user_uuid = 1;
}
